module08/homework/02/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpservice
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: httpserver
  type: LoadBalancer
